--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,11 +42,8 @@
           </button>
         </p>
       <% end %>
-        
-    
       <%= yield %>
     </div>
-    
-    <%= yield :footer %>
+    <%= render "shared/footer" %>
   </body>
 </html>
