--- a/app/views/pessoal/_navbar.html.erb
+++ b/app/views/pessoal/_navbar.html.erb
@@ -16,9 +16,9 @@
         <li class="nav-item">
           <a class="nav-link" href=<%=root_path + "#sobre"%>>Sobre</a>
         </li>
-        <li class="nav-item">
+        <!--<li class="nav-item">
           <a class="nav-link" href=<%= desafios_path %>>Desafios</a>
-        </li>
+        </li>-->
         <li class="nav-item">
           <a class="nav-link" href=<%= livros_path %>>Livros</a>
         </li>
