--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -19,111 +19,138 @@
     
     <hr/>
     <!-- 2019 -->
-    <h2>2019</h2>
-    <h5>Games:</h5>
-    <ul>
-        <li>The Awesome Adventures of Captain Spirit</li>
-        <li>A Jornada - FIFA19</li>
-    </ul>
+    <div class = "p-secao">
+        <h3>2019</h3>
+    </div>
     
-    <h5>Filmes:</h5>
-    <ul>
-        <li>Black Mirror Bandersnatch</li>
-        <li>Bird Box</li>
-        <li>Aquaman</li>
-        <li>Wifi Ralph</li>
-        <li>Homem-Aranha no Aranhaverso</li>
-        <li>Como Treinar Seu Dragão 3</li>
-        <li>Alita - Maquina de Combate</li>
-        <li>Capitã Marvel</li>
-        <li>Spiderman - Homecoming</li>
-        <li>Vingadores - Ultimato</li>
-        <li>Até o último homem</li>
-        <li>Jumanji - Bem-vindo à Selva</li>
-        <li>Aladdin (2019)</li>
-        <li>Toy Story 4</li>
-        <li>Turma da Mônica - Laços</li>
-        <li>Rei Leão (2019)</li>
-    </ul>
-    
-    <h5>Séries:</h5>
-    <ul>
-        <li>Shooter (Netflix) - S01</li>
-        <li>Game of Thrones - S08</li>
-        <li>Dark - S02</li>
-        <li>Stranger Things - S03</li>
-    </ul>
-    
-    <h5>Animes:</h5>
-    
-    <h5>HQs:</h5>
-    
-    <hr/>
-    <!-- 2018 -->
-    <h2>2018</h2>
     <div class = "row">
         <div class = "col">
-            <h5>Games (3)</h5>
-                <ul>
-                    <li>Life is Strange</li>
-                    <li>Forza Horizon 3 - DEMO </li>
-                    <li>Father and Son</li>
-                </ul>
-                
-                <h5>Filmes (19)</h5>
-                <ul>
-                    <li>Doctor Strange </li>
-                    <li>Bright </li>
-                    <li>Thor: Ragnarok </li>
-                    <li>Pantera Negra</li>
-                    <li>Festa da Salsicha</li>
-                    <li>A Teoria de Tudo</li>
-                    <li>Pirates of the Caribbean: Dead Men Tell No Tales</li>
-                    <li>Vigadores: Guerra Infinita</li>
-                    <li>Sense8 - Episódio Final</li>
-                    <li>Valente</li>
-                    <li>Minions</li>
-                    <li>Os Incríveis 2</li>
-                    <li>Guardiões da Galáxia</li>
-                    <li>Assassinato no expresso do oriente</li>
-                    <li>Missão Impossível: Efeito Fallout</li>
-                    <li>Baby Driver</li>
-                    <li>Planeta dos Macacos - O confronto</li>
-                    <li>Homem-vespa e a Formiga</li>
-                    <li>Animais Fantásticos - Crimes de Grindwald</li>
-                </ul>
+            <div class = "p-secao-sm">
+                <h5>Games:</h5>
+            </div>
+            <ul>
+                <li class = "mb-sm">The Awesome Adventures of Captain Spirit</li>
+                <li class = "mb-sm">A Jornada - FIFA19</li>
+            </ul>
+            
+            <div class = "p-secao-sm">
+                <h5>Filmes:</h5>
+            </div>
+            <ul>
+                <li class = "mb-sm">Black Mirror Bandersnatch</li>
+                <li class = "mb-sm">Bird Box</li>
+                <li class = "mb-sm">Aquaman</li>
+                <li class = "mb-sm">Wifi Ralph</li>
+                <li class = "mb-sm">Homem-Aranha no Aranhaverso</li>
+                <li class = "mb-sm">Como Treinar Seu Dragão 3</li>
+                <li class = "mb-sm">Alita - Maquina de Combate</li>
+                <li class = "mb-sm">Capitã Marvel</li>
+                <li class = "mb-sm">Spiderman - Homecoming</li>
+                <li class = "mb-sm">Vingadores - Ultimato</li>
+                <li class = "mb-sm">Até o último homem</li>
+                <li class = "mb-sm">Jumanji - Bem-vindo à Selva</li>
+                <li class = "mb-sm">Aladdin (2019)</li>
+                <li class = "mb-sm">Toy Story 4</li>
+                <li class = "mb-sm">Turma da Mônica - Laços</li>
+                <li class = "mb-sm">Rei Leão (2019)</li>
+            </ul>
         </div>
         
         <div class = "col">
-            <h5>Séries (5)</h5>
-                <ul>
-                    <li>Stranger Things </li>
-                    <li>Dark </li>
-                    <li>Cosmos: Uma odisséia no Espaço-Tempo </li>
-                    <li>La Casa de Papel S01 - S02</li>
-                    <li>Manhunt: UNABOMBER</li>
-                </ul>
-                
+            <div class = "p-secao-sm">
+                <h5>Séries:</h5>
+            </div>
+            <ul>
+                <li class = "mb-sm">Shooter (Netflix) - S01</li>
+                <li class = "mb-sm">Game of Thrones - S08</li>
+                <li class = "mb-sm">Dark - S02</li>
+                <li class = "mb-sm">Stranger Things - S03</li>
+            </ul>
+            
+            <div class = "p-secao-sm">
+                <h5>Animes:</h5>
+            </div>
+            
+            <div class = "p-secao-sm">
+                <h5>HQs:</h5>
+            </div>
+        </div>
+    </div>
+    <hr/>
+    
+    <!-- 2018 -->
+    <div class = "p-secao">
+        <h3>2018</h3>    
+    </div>
+    
+    <div class = "row">
+        <div class = "col">
+            <div class = "p-secao-sm">
+                <h5>Games (3)</h5>
+            </div>
+            <ul>
+                <li class = "mb-sm">Life is Strange</li>
+                <li class = "mb-sm">Forza Horizon 3 - DEMO </li>
+                <li class = "mb-sm">Father and Son</li>
+            </ul>
+             
+            <div class = "p-secao-sm">
+                <h5>Filmes (19)</h5>
+            </div>
+            <ul>
+                <li class = "mb-sm">Doctor Strange </li>
+                <li class = "mb-sm">Bright </li>
+                <li class = "mb-sm">Thor: Ragnarok </li>
+                <li class = "mb-sm">Pantera Negra</li>
+                <li class = "mb-sm">Festa da Salsicha</li>
+                <li class = "mb-sm">A Teoria de Tudo</li>
+                <li class = "mb-sm">Pirates of the Caribbean: Dead Men Tell No Tales</li>
+                <li class = "mb-sm">Vigadores: Guerra Infinita</li>
+                <li class = "mb-sm">Sense8 - Episódio Final</li>
+                <li class = "mb-sm">Valente</li>
+                <li class = "mb-sm">Minions</li>
+                <li class = "mb-sm">Os Incríveis 2</li>
+                <li class = "mb-sm">Guardiões da Galáxia</li>
+                <li class = "mb-sm">Assassinato no expresso do oriente</li>
+                <li class = "mb-sm">Missão Impossível: Efeito Fallout</li>
+                <li class = "mb-sm">Baby Driver</li>
+                <li class = "mb-sm">Planeta dos Macacos - O confronto</li>
+                <li class = "mb-sm">Homem-vespa e a Formiga</li>
+                <li class = "mb-sm">Animais Fantásticos - Crimes de Grindwald</li>
+            </ul>
+        </div>
+        
+        <div class = "col">
+            <div class = "p-secao-sm">
+                <h5>Séries (5)</h5>
+            </div>
+            <ul>
+                <li class = "mb-sm">Stranger Things </li>
+                <li class = "mb-sm">Dark </li>
+                <li class = "mb-sm">Cosmos: Uma odisséia no Espaço-Tempo </li>
+                <li class = "mb-sm">La Casa de Papel S01 - S02</li>
+                <li class = "mb-sm">Manhunt: UNABOMBER</li>
+            </ul>
+            
+            <div class = "p-secao-sm">
                 <h5>Animes (1)</h5>
-                <ul>
-                    <li>One Punch-man</li>
-                </ul>
-                
+            </div>
+            <ul>
+                <li class = "mb-sm">One Punch-man</li>
+            </ul>
+            
+            <div class = "p-secao-sm">
                 <h5>HQs (7)</h5>
-                
-                <ul>
-                    <li>Guerras Secretas: Guerra Civil</li>
-                    <li>Mulher Maravilha - Sangue</li>
-                    <li>Mulher Maravilha - Direito de Nascença</li>
-                    <li>Mulher Maravilha - Força</li>
-                    <li>Mulher Maravilha - Guerra</li>
-                    <li>Mulher Maravilha - Pele</li>
-                    <li>Miss Marvel - Danos por segundo</li>
-                </ul>
+            </div>
+            <ul>
+                <li class = "mb-sm">Guerras Secretas: Guerra Civil</li>
+                <li class = "mb-sm">Mulher Maravilha - Sangue</li>
+                <li class = "mb-sm">Mulher Maravilha - Direito de Nascença</li>
+                <li class = "mb-sm">Mulher Maravilha - Força</li>
+                <li class = "mb-sm">Mulher Maravilha - Guerra</li>
+                <li class = "mb-sm">Mulher Maravilha - Pele</li>
+                <li class = "mb-sm">Miss Marvel - Danos por segundo</li>
+            </ul>
         </div>
     </div>
 </div>
-
-<%= content_for :footer do%>
-    <%= render "footer" %>
-<% end %>
