--- a/app/views/profissional/_navbar.html.erb
+++ b/app/views/profissional/_navbar.html.erb
@@ -29,10 +29,10 @@
       
       <ul class = "navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href=<%= root_path %>>Site Pessoal</a>
+            <a class="nav-link" href=<%= root_path %>>Pessoal</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="https://sites.google.com/cin.ufpe.br/ricarthlima/p%C3%A1gina-inicial">Site Acadêmico</a>
+            <a class="nav-link" href="https://sites.google.com/cin.ufpe.br/ricarthlima/p%C3%A1gina-inicial">Acadêmico</a>
         </li>
       </ul>
     </div>
