--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,12 @@
 <div class = "footer">
     <center>
         Você pode me encontrar nas minhas redes sociais: <br/>
-        <a href = "http://github.com/ricarthlima/" target = "_blank">GitHub</a> - 
-        <a href = "http://fb.com/ricarthlima" target = "_blank">Facebook</a> - 
-        <a href = "http://instagram.com/ricarthlima" target = "_blank">Instagram</a> - 
-        <a href = "https://www.youtube.com/channel/UCFxy994CuYWRG0HOLBq0gyQ" target = "_blank">YouTube</a> - 
-        Medium
+        <div class = "footer-icons">
+            <a href = "http://github.com/ricarthlima/" target = "_blank"><i class="fab fa-github mr-sm"></i></a> 
+            <a href = "http://fb.com/ricarthlima" target = "_blank"><i class="fab fa-facebook mr-sm"></i></a>
+            <a href = "http://instagram.com/ricarthlima" target = "_blank"><i class="fab fa-instagram mr-sm"></i></a>
+            <a href = "https://www.youtube.com/channel/UCFxy994CuYWRG0HOLBq0gyQ" target = "_blank"><i class="fab fa-youtube mr-sm"></i></a> 
+            <i class="fab fa-medium"></i>
+        </div>
     </center>
 </div>
