--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@
 /*Importações*/
 @import 'bootstrap';
 
-/*Definição de Pad~ros*/
+/*Definição de Padrões*/
 body{
     background-color: #f4f4f4;
     font-family: 'Libre Franklin', sans-serif;
@@ -44,6 +44,14 @@ h1, h2, h3, h4, h5{
 
 .mt-sm{
     margin-top: 5px;
+}
+
+.mt-md{
+    margin-top: 15px;    
+}
+
+.mb-md{
+    margin-bottom: 15px;
 }
 
 .no-padding{
@@ -111,13 +119,6 @@ div.texto{
     padding: 3%;
 }
 
-div.footer{
-    padding: 1%;
-    background-color: #26053F;
-    color: #FFFFFF;
-    font-size: small;
-}
-
 img.imagem-logo{
     max-height: 76px;
     width: auto;
@@ -136,9 +137,19 @@ div.justificado{
 }
 
 .p-secao{
-    padding: 1% 3% 1% 3%;
+    padding: 20px 3% 12px 3%;
     background-color: #2d431c;
     color: #FFFFFF;
+    margin-bottom: 25px;
+}
+
+.p-secao-sm{
+    padding: 9px 3% 1px 3%;
+    background-color: #2d431c;
+    color: #FFFFFF;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    
 }
 
 .p-texto{
@@ -162,11 +173,15 @@ div.justificado{
     background-position: center 90%;
 }
 
-.p-footer{
-    padding: 1%;
-    background-color: #2d431c;
+.footer{
+    padding: 20px 10px;
+    background-color: #292929;
     color: #FFFFFF;
     font-size: small;
+}
+
+.footer-icons{
+    font-size: 2em;
 }
 
 .imagem-perdida{
