--- a/app/views/pessoal/personal_books.html.erb
+++ b/app/views/pessoal/personal_books.html.erb
@@ -17,41 +17,43 @@
     <hr>
     <h2><center>Minhas 5 indicações!</center></h2>
     <hr>
-    <h2 class = "my-2"><center>Lidos por ano</center></h2>
-    <h3 class = "my-2">2019</h2>
+    
+    <div class = "p-secao">
+        <h3>2019</h3>
+    </div>
 	<ul>
-		<li>O Milagre da Manhã (194 páginas), por Hal Elrod (18/02/2019 + 8 dias)</li>
-        <li>O homem mais rico da Babilônia (157 páginas), por George S Clason (25/02/2019 + 23 dias)</li>
-        <li>[Pocket Edition] Os 7 hábitos das pessoas altamente eficazes (77 páginas), por Stephen R. Covey (26/03/2019)</li>
-        <li>Como pensar mais sobre sexo (150 páginas), por Alain de Botton (04/04/2019 + 37 dias)</li>
+		<li class = "mb-sm">O Milagre da Manhã (194 páginas), por Hal Elrod (18/02/2019 + 8 dias)</li>
+        <li class = "mb-sm">O homem mais rico da Babilônia (157 páginas), por George S Clason (25/02/2019 + 23 dias)</li>
+        <li class = "mb-sm">[Pocket Edition] Os 7 hábitos das pessoas altamente eficazes (77 páginas), por Stephen R. Covey (26/03/2019)</li>
+        <li class = "mb-sm">Como pensar mais sobre sexo (150 páginas), por Alain de Botton (04/04/2019 + 37 dias)</li>
 	</ul>
 	
-    <h3 class = "my-2">2018 (10)</h3>
+	<div class = "p-secao">
+        <h3>2018 (10)</h3>
+    </div>
     <ul>
-        <li>A Startup Enxuta (274 páginas), por Eric Ries (02/10/2018 + n dias)</li>
-        <li>Algoritmos para Viver (529 páginas), por Brian Christian e Tom Griffiths (03/08/2018 + n dias)</li>
-        <li>A Jornada do Escritor (484 páginas), por Christopher Vogler (03/08/2018 + n dias)</li>
-        <li>As cinco linguagens do amor (216 páginas), por Gary Chapman </li>
-        <li>De volta ao mosteiro (192 páginas), por James C. Hunter </li>
-        <li>O caminho para independência financeira (77 páginas), por Diogo Pereira </li>
-        <li>Cave Mais Fundo (310 páginas), por Joshua Harris</li>
-        <li>2001 Uma odisséia no espaço (336 páginas), por Arthur C. Clark</li>
-        <li>Pense como um artista (224 páginas), por Will Gompertz (2017 - 2018)</li>
-        <li><strong>Audiolivro</strong> O pequeno príncipe (160 páginas), por Antoine de Saint-Exupéry </li>
+        <li class = "mb-sm">A Startup Enxuta (274 páginas), por Eric Ries (02/10/2018 + n dias)</li>
+        <li class = "mb-sm">Algoritmos para Viver (529 páginas), por Brian Christian e Tom Griffiths (03/08/2018 + n dias)</li>
+        <li class = "mb-sm">A Jornada do Escritor (484 páginas), por Christopher Vogler (03/08/2018 + n dias)</li>
+        <li class = "mb-sm">As cinco linguagens do amor (216 páginas), por Gary Chapman </li>
+        <li class = "mb-sm">De volta ao mosteiro (192 páginas), por James C. Hunter </li>
+        <li class = "mb-sm">O caminho para independência financeira (77 páginas), por Diogo Pereira </li>
+        <li class = "mb-sm">Cave Mais Fundo (310 páginas), por Joshua Harris</li>
+        <li class = "mb-sm">2001 Uma odisséia no espaço (336 páginas), por Arthur C. Clark</li>
+        <li class = "mb-sm">Pense como um artista (224 páginas), por Will Gompertz (2017 - 2018)</li>
+        <li class = "mb-sm"><strong>Audiolivro</strong> O pequeno príncipe (160 páginas), por Antoine de Saint-Exupéry </li>
     </ul>
     
-    <h3 class = "my-2">Antes disso...</h3>
+    <div class = "p-secao">
+        <h3>Antes disso...</h3>
+    </div>
     <ul>
-        <li>O poder do hábito, por Charles Duhigg.</li>
-        <li>O monge e o executivo, por James C. Hunter.</li>
-        <li>Como conquistar as pessoas, por Allan Pease e Barbara Pease.</li>
-        <li>10 faces da inovação, por Thomas Kelley e Jonathan Littman.</li>
-        <li>Você É Inteligente O Bastante Para Trabalhar No Google?, por William Poundstone.</li>
-        <li>O homem mais rico da Babilônia, por George S Clason.</li>
+        <li class = "mb-sm">O poder do hábito, por Charles Duhigg.</li>
+        <li class = "mb-sm">O monge e o executivo, por James C. Hunter.</li>
+        <li class = "mb-sm">Como conquistar as pessoas, por Allan Pease e Barbara Pease.</li>
+        <li class = "mb-sm">10 faces da inovação, por Thomas Kelley e Jonathan Littman.</li>
+        <li class = "mb-sm">Você É Inteligente O Bastante Para Trabalhar No Google?, por William Poundstone.</li>
+        <li class = "mb-sm">O homem mais rico da Babilônia, por George S Clason.</li>
     </ul>
     
 </div>
-
-<%= content_for :footer do%>
-    <%= render "footer" %>
-<% end %>
