cabeçalho do pessoal alterado

--- a/app/views/pessoal/_cabecalho.html.erb
+++ b/app/views/pessoal/_cabecalho.html.erb
@@ -1,5 +1,13 @@
 <!-- Cabeçalho -->
-<center>
+<div class = "p-header">
+    <img class = "img-fluid" src = "/assets/ricarth-fundo-pessoal.jpg" style = "width: 100vw; height: auto;">
+    
+    <div class = "p-title-background">
+        <h3>Eterno estudante</h3>
+        Disposto a usar meus conhecimentos por um mundo melhor
+    </div>
+</div>
+<!--<center>
     <div class = "container p-titulo-imagem">
         <div class = "row">
             <div class = "col align-self-end">
@@ -8,4 +16,4 @@
              </div>
         </div>
     </div>
-</center>
+</center>-->
