--- a/app/views/pessoal/index.html.erb
+++ b/app/views/pessoal/index.html.erb
@@ -8,10 +8,10 @@
     <h3>Sobre mim</h3>
 </div>
 
-<div class = "container my-4 padding-lados">
+<div class = "container my-2 padding-lados">
     <div class = "row">
         <div class = "col-md-auto my-2">
-            <center><%= image_tag "/assets/ricarth-foto-redonda.png", class: "imagem-foto"%></center>
+            <center><%= image_tag "/assets/ricarth-personal.png", class: "imagem-foto"%></center>
         </div>
         <div class = "col my-2">
             <h3><strong>Ricarth Ruan da Silva Lima</strong></h3>
@@ -45,24 +45,36 @@
     Foi no cursando SI que eu descobri outra paixão: gerar conteúdo educativo e ensinar. Fui monitor de <strong>Programação 1</strong> por 3 períodos, de <strong>Algoritmos e 
     Estrutura de Dados</strong> por 2 períodos, e de <strong>Redes de Computadores</strong> por 1 período. Ainda estou me descobrindo no sentido de se vou trilhar minha vida no
     rumo do Empreendedorismo ou da Educação, ou de ambos. Mas no caso mais simples, sempre tentarei ajudar. Você pode conferir meus conteúdos de programação no 
-    <a href = "tinyurl.com/secretplaces2">Secret Places</a> e no meu canal no <a href = "https://www.youtube.com/channel/UCFxy994CuYWRG0HOLBq0gyQ">YouTube</a></p>
+    <a href = "tinyurl.com/secretplaces2">Secret Places</a> e no meu canal no <a href = "https://www.youtube.com/channel/UCFxy994CuYWRG0HOLBq0gyQ">YouTube</a>.</p>
     
-    Hoje sou, além de estudante, desenvolvedor no <a href = "http://lactorun.com.br/">LactoRun</a>, estagiário na <a href = "http://www.serttel.com.br/">Serttel</a>, fundador e desenvolvedor do <a href = "https://evegano.herokuapp.com">É vegano?</a>,
+    Na primeira metade do ano de 2019 me aventurei no meu primeiro emprego como estagiário de <strong>Desenvolvimento Web Full Stack</strong> na <a href = "http://www.serttel.com.br/">Serttel</a>.
+    Foi uma experiência incrível de aprendizado. Lá estavamos desenvolvendo uma reformulação do zero do sistema interno do projeto de Veículos Compartilhados (bicicletas, patinetes, carros etc), e como
+    o objetivo era atualizar a tecnologia, usavamos <strong>Angular 7</strong> (HTML, CSS, Bootstrap, Typescript) para o front, e <strong>Spring Boot</strong> (Java, JPA, Hibernate) para o back. 
+    Além de ter que aprender na prática usar esses frameworks, entendi também como uma empresa funciona por dentro no mundo real. Fiquei de Janeiro até Julho, e, quando completei 6 meses saí para me
+    aventurar em outros projetos.</p>
+    
+    Hoje sou, além de estudante, desenvolvedor no <a href = "http://lactorun.com.br/">LactoRun</a>, estagiário na , fundador e desenvolvedor do <a href = "https://evegano.herokuapp.com">É vegano?</a>,
     fundador e desenvolvedor do aplicativo Little Thinkers e desenvolvedor para a equipe do Privacy Criteria.
 </div>
 
-<div class = "p-secao" id = "sobre">
+<div class = "p-secao my-2" id = "sobre">
     <h3>Áreas de Interesse</h3>
 </div>
 
-<div class = "p-texto">
+<div>
     <center><img src = "/assets/areas-interesse.png" class = "img-fluid imagem-perdida"></center>
-    <h5 class = "my-2">Em programação</h5>
+    <div class = "p-secao-sm">
+        <h5>Em programação</h5>
+    </div>
     <p>Python, Android, Rails, Java, Bootstrap, HTML, CSS, JS e Web Apps.</p>
     
-    <h5>Em empreendedorismo</h5>
+    <div class = "p-secao-sm">
+        <h5>Em empreendedorismo</h5>
+    </div>
     <p>Lean Startup, Metodologias Ágeis, Gestão de Pessoas, Estudo e Resolução de Problemas, Entrega de Valor, Marketing Digital e Design Thinking.</p>
     
-    <h5>Em design</h5>
+    <div class = "p-secao-sm">
+        <h5>Em design</h5>
+    </div>
     <p>Experiência do Usuário, Interface do Usuário, Photshop, Premiere.</p>
 </div>
