--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -107,6 +107,8 @@ div.titulo-imagem{
 
 img.imagem-foto{
     max-height: 150px;
+    border-radius: 50%;
+    border: 5px solid #3B4F36;
 }
 
 div.secao{
@@ -136,6 +138,23 @@ div.justificado{
     background-color: #2d431c;
 }
 
+.p-header{
+    position: relative;
+}
+
+.p-title-background{
+    background: #292929E6;
+    color: white;
+    text-align: right;
+    padding: 7px 3%;
+    
+    width: 100%;
+    
+    position: absolute;
+    bottom: 3%;
+    right: 0px;
+}
+
 .p-secao{
     padding: 20px 3% 12px 3%;
     background-color: #2d431c;
@@ -144,12 +163,11 @@ div.justificado{
 }
 
 .p-secao-sm{
-    padding: 9px 3% 1px 3%;
+    padding: 9px 2% 1px 2%;
     background-color: #2d431c;
     color: #FFFFFF;
     margin-top: 5px;
     margin-bottom: 10px;
-    
 }
 
 .p-texto{
@@ -167,7 +185,7 @@ div.justificado{
     color: #FFFFFF;
     box-shadow: 0px 3px 2px rgba(0,0,0,0.5);
 
-    background-image: url('ricarth-fundo-verde.jpg');
+    background-image: url('ricarth-fundo-pessoal.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center 90%;
@@ -185,7 +203,8 @@ div.justificado{
 }
 
 .imagem-perdida{
-    max-width: 70%;
+    max-width: 75%;
+    margin-bottom: 25px;
 }
 
 .text-light{
