--- a/app/views/pessoal/personal_books.html.erb
+++ b/app/views/pessoal/personal_books.html.erb
@@ -16,6 +16,7 @@
     do que comento na página <a href = <%= oqfev_path %>>O que fiz enquanto vivi?</a>, quanto como registro do meu avanço na leitura. Espero um dia chegar no nível deles haha.
     <hr>
     <h2><center>Minhas 5 indicações!</center></h2>
+    Em breve...
     <hr>
     
     <div class = "p-secao">
@@ -28,7 +29,7 @@
         <li class = "mb-sm">Como pensar mais sobre sexo (150 páginas), por Alain de Botton (04/04/2019 + 37 dias)</li>
 	</ul>
 	
-	<div class = "p-secao">
+	<div class = "p-secao">s
         <h3>2018 (10)</h3>
     </div>
     <ul>
