adicionado botao flutuante email

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,5 +45,9 @@
       <%= yield %>
     </div>
     <%= render "shared/footer" %>
+    
+    <button class = "btn botao-flutuante" onclick = "window.location.href = 'mailto:rrsl@cin.ufpe.br';">
+      <i class="fas fa-envelope"></i>
+    </button>
   </body>
 </html>
