--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -252,3 +252,25 @@ div.justificado{
     padding-bottom: 40px;
     position: static;
 }
+
+.botao-flutuante{
+    position: fixed;
+    bottom: 4vh;
+    right: 2vw;
+    
+    font-size: 30px;
+    color: white;
+    text-align: center;
+    
+    background: #292929;
+    border-radius: 50%;
+    box-shadow: 1px 2px 2px rgba(0,0,0,0.5);
+    
+    padding-top: 7px;
+    height: 60px;
+    width: 60px;
+}
+
+.botao-flutuante:hover{
+    color: #dddddd;
+}
