corrigidos erros simples

--- a/app/views/pessoal/index.html.erb
+++ b/app/views/pessoal/index.html.erb
@@ -39,11 +39,11 @@
     Na primeira metade do ano de 2019 me aventurei no meu primeiro emprego como estagiário de <strong>Desenvolvimento Web Full Stack</strong> na <a href = "http://www.serttel.com.br/">Serttel</a>.
     Foi uma experiência incrível de aprendizado. Lá estavamos desenvolvendo uma reformulação do zero do sistema interno do projeto de Veículos Compartilhados (bicicletas, patinetes, carros etc), e como
     o objetivo era atualizar a tecnologia, usavamos <strong>Angular 7</strong> (HTML, CSS, Bootstrap, Typescript) para o front, e <strong>Spring Boot</strong> (Java, JPA, Hibernate) para o back. 
-    Além de ter que aprender na prática usar esses frameworks, entendi também como uma empresa funciona por dentro no mundo real. Fiquei de Janeiro até Julho, e, quando completei 6 meses saí para me
-    aventurar em outros projetos.</p>
+    Além de ter que aprender na prática usar esses frameworks, entendi também como uma empresa funciona por dentro no mundo real. Fiquei de Janeiro até Julho, e, quando completei 6 meses saí para dar
+    continuidade em outros projetos.</p>
     
-    Hoje sou, além de estudante, desenvolvedor no <a href = "http://lactorun.com.br/">LactoRun</a>, estagiário na , fundador e desenvolvedor do <a href = "https://evegano.herokuapp.com">É vegano?</a>,
-    fundador e desenvolvedor do aplicativo Little Thinkers e desenvolvedor para a equipe do Privacy Criteria.
+    Hoje sou, além de estudante, desenvolvedor no <a href = "http://lactorun.com.br/">LactoRun</a>, fundador e desenvolvedor do <a href = "https://evegano.herokuapp.com">É vegano?</a>,
+    fundador e desenvolvedor do aplicativo Little Thinkers.
 </div>
 
 <div class = "p-secao my-2" id = "sobre">
