--- a/app/views/pessoal/personal_books.html.erb
+++ b/app/views/pessoal/personal_books.html.erb
@@ -29,7 +29,7 @@
         <li class = "mb-sm">Como pensar mais sobre sexo (150 páginas), por Alain de Botton (04/04/2019 + 37 dias)</li>
 	</ul>
 	
-	<div class = "p-secao">s
+	<div class = "p-secao">
         <h3>2018 (10)</h3>
     </div>
     <ul>
