adicionado SMM e GdA

--- a/app/views/pessoal/personal_books.html.erb
+++ b/app/views/pessoal/personal_books.html.erb
@@ -27,6 +27,8 @@
         <li class = "mb-sm">O homem mais rico da Babilônia (157 páginas), por George S Clason (25/02/2019 + 23 dias)</li>
         <li class = "mb-sm">[Pocket Edition] Os 7 hábitos das pessoas altamente eficazes (77 páginas), por Stephen R. Covey (26/03/2019)</li>
         <li class = "mb-sm">Como pensar mais sobre sexo (150 páginas), por Alain de Botton (04/04/2019 + 37 dias)</li>
+        <li class = "mb-sm">Gestão do Amanhã (247 páginas), por Sando Magaldi e José Salibi Neto (26/03/2019 + 58 dias)</li>
+        <li class = "mb-sm">Os segredos da mente milionária (175 páginas), por T. Harv Eker (23/05/2019 + 76 dias)</li>
 	</ul>
 	
 	<div class = "p-secao">
