adicionado homem aranha

--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -53,6 +53,7 @@
                 <li class = "mb-sm">Toy Story 4</li>
                 <li class = "mb-sm">Turma da Mônica - Laços</li>
                 <li class = "mb-sm">Rei Leão (2019)</li>
+                <li class = "mb-sm">Homem-Aranha - Longe de Casa</li>
             </ul>
         </div>
         
