--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -54,6 +54,7 @@
                 <li class = "mb-sm">Turma da Mônica - Laços</li>
                 <li class = "mb-sm">Rei Leão (2019)</li>
                 <li class = "mb-sm">Homem-Aranha - Longe de Casa</li>
+                <li class = "mb-sm">Infiltrado na Klan</li>
             </ul>
         </div>
         
