--- a/app/views/pessoal/wishlist.html.erb
+++ b/app/views/pessoal/wishlist.html.erb
@@ -2,6 +2,7 @@
   <%= render "pessoal/navbar" %>
 <% end %>
 
+
 <img src = "/assets/gifts.jpg" class = "img-fluid">
 
 <div class = "p-texto">
@@ -14,101 +15,126 @@
     </p>
     
     <br/>
-    
-    <small>
-        <strong>Nível de desejo:</strong>
-        <img height = "15" src = <%= "/assets/loves/love0.png"%>>
-        <%= wishlevel(0) %>
-        |
-        <img height = "15" src = <%= "/assets/loves/love1.png"%>>
-        <%= wishlevel(1) %>
-        |
-        <img height = "15" src = <%= "/assets/loves/love2.png"%>>
-        <%= wishlevel(2) %>
-        |
-        <img height = "15" src = <%= "/assets/loves/love3.png"%>>
-        <%= wishlevel(3) %>
-        |
-        <img height = "15" src = <%= "/assets/loves/love4.png"%>>
-        <%= wishlevel(4) %>
-        |
-        <img height = "15" src = <%= "/assets/loves/love5.png"%>>
-        <%= wishlevel(5) %>
-    </small>
-    
-    <div id="carouselExampleIndicators" class="carousel slide mt-sm" data-ride="carousel" data-interval="7000">
-      <ol class="carousel-indicators">
-          <% for i in 0..(@gifts.slice(0,10).length-1) %>
-              <li data-target="#carouselExampleIndicators" data-slide-to=<%=i%> class="active"></li>
-          <% end %>
-      </ol>
-      <div class="carousel-inner">
-        <% @gifts.slice(0,10).each do |gift| %>
-            <% if @primeiro == false %>
-                <div class="carousel-item active item-carrosel">
-                <% @primeiro = true %>
-            <% else %>
-                <div class="carousel-item item-carrosel">
+    <% if @gifts.size > 0 %>
+      <small>
+          <strong>Nível de desejo:</strong>
+          <img height = "15" src = <%= "/assets/loves/love0.png"%>>
+          <%= wishlevel(0) %>
+          |
+          <img height = "15" src = <%= "/assets/loves/love1.png"%>>
+          <%= wishlevel(1) %>
+          |
+          <img height = "15" src = <%= "/assets/loves/love2.png"%>>
+          <%= wishlevel(2) %>
+          |
+          <img height = "15" src = <%= "/assets/loves/love3.png"%>>
+          <%= wishlevel(3) %>
+          |
+          <img height = "15" src = <%= "/assets/loves/love4.png"%>>
+          <%= wishlevel(4) %>
+          |
+          <img height = "15" src = <%= "/assets/loves/love5.png"%>>
+          <%= wishlevel(5) %>
+          |
+          <img height = "15" src = <%= "/assets/loves/love6.png"%>>
+          <%= wishlevel(6) %>
+      </small>
+      
+      <div id="carouselExampleIndicators" class="carousel slide mt-sm" data-ride="carousel" data-interval="7000">
+        <ol class="carousel-indicators">
+            <% for i in 0..(@gifts.slice(0,10).length-1) %>
+                <li data-target="#carouselExampleIndicators" data-slide-to=<%=i%> class="active"></li>
             <% end %>
-              <center>
-                  <img class="img-fluid img-carrosel" src=<%= gift.url_image %> alt=<%= gift.name %>>
-                  <div class="carousel-caption caption-carrosel">
-                      <h5><%= gift.name %></h5>
-                      <p><%= gift.description %></p>
-                      <hr style = "border-color: #FFFFFF66; width: 20%;">
-                      <p>
-                          <img height = "25" src = <%= "/assets/loves/love" + gift.wishlevel.to_s + ".png"%>>
-                          <%= wishlevel(gift.wishlevel) %>
-                      </p>
-                      <p>
-                          <a class = "btn btn-success" target = "_blank" href = <%=gift.url_prod%>><i class="fas fa-shopping-cart"></i>    <%=number_to_currency(gift.price, unit: "R$", separator: ",", delimiter: "")%></a>
-                      </p>
-                  </div>
-              </center>
-            </div>
+        </ol>
+        <div class="carousel-inner">
+          <% @gifts.slice(0,10).each do |gift| %>
+              <% if @primeiro == false %>
+                  <div class="carousel-item active item-carrosel">
+                  <% @primeiro = true %>
+              <% else %>
+                  <div class="carousel-item item-carrosel">
+              <% end %>
+                <center>
+                    <img class="img-fluid img-carrosel" src=<%= gift.url_image %> alt=<%= gift.name %>>
+                    <div class="carousel-caption caption-carrosel">
+                        <h5><%= gift.name %></h5>
+                        <p><%= gift.description %></p>
+                        <hr style = "border-color: #FFFFFF66; width: 20%;">
+                        <p>
+                            <img height = "25" src = <%= "/assets/loves/love" + gift.wishlevel.to_s + ".png"%>>
+                            <%= wishlevel(gift.wishlevel) %>
+                        </p>
+                        <p>
+                            <a class = "btn btn-success" target = "_blank" href = <%=gift.url_prod%>><i class="fas fa-shopping-cart"></i>    <%=number_to_currency(gift.price, unit: "R$", separator: ",", delimiter: "")%></a>
+                        </p>
+                    </div>
+                </center>
+              </div>
+          <% end %>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Anterior</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Próximo</span>
+        </a>
+      </div>
+      
+      <p>
+        <br/>
+        <strong>Aviso para você e para mim:</strong><br/>
+        Nunca compre nada que você não pode pagar.
+      </p>
+      
+      <hr>
+      <div class = "row align-items-center justify-content-center justify-content-md-around">
+        <% loop do %>
+          <div class = "col align-self-center grid-col">
+            <center>
+              <% gift = @gifts[@i] %>
+              <div class = "grid-img-area">
+                <img class="img-fluid grid-img" src=<%= gift.url_image %> alt=<%= gift.name %>>
+              </div>
+              <img height = "20" src = <%= "/assets/loves/love" + gift.wishlevel.to_s + ".png"%>>
+              <small><%= wishlevel(gift.wishlevel) %></small>
+              <div class = "grid-text-area">
+                <h6><%= gift.name %></h6>
+                <small><%= gift.description %></small>
+              </div>
+              <p>
+                <a class = "btn btn-success btn-sm" target = "_blank" href = <%=gift.url_prod%>><i class="fas fa-shopping-cart"></i>    <%=number_to_currency(gift.price, unit: "R$", separator: ",", delimiter: "")%></a>
+              </p>
+            </center>
+          </div>
+          <% @i = @i + 1 %>
+          <% break if (@i >= @gifts.length) %> 
         <% end %>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Anterior</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Próximo</span>
-      </a>
     </div>
-    
-    <p>
-      <br/>
-      <strong>Aviso para você e para mim:</strong><br/>
-      Nunca compre nada que você não pode pagar.
-    </p>
-    
-    <hr>
-    <div class = "row align-items-center justify-content-center justify-content-md-around">
-      <% loop do %>
-        <div class = "col align-self-center grid-col">
-          <center>
-            <% gift = @gifts[@i] %>
-            <div class = "grid-img-area">
-              <img class="img-fluid grid-img" src=<%= gift.url_image %> alt=<%= gift.name %>>
-            </div>
-            <img height = "20" src = <%= "/assets/loves/love" + gift.wishlevel.to_s + ".png"%>>
-                <%= wishlevel(gift.wishlevel) %>
-            </small>
-            <div class = "grid-text-area">
-              <h6><%= gift.name %></h6>
-              <small><%= gift.description %></small>
-            </div>
-            <p>
-              <a class = "btn btn-success btn-sm" target = "_blank" href = <%=gift.url_prod%>><i class="fas fa-shopping-cart"></i>    <%=number_to_currency(gift.price, unit: "R$", separator: ",", delimiter: "")%></a>
-            </p>
-            <small>
-          </center>
-        </div>
-        <% @i = @i + 1 %>
-        <% break if (@i >= @gifts.length) %> 
-      <% end %>
+  <% else %>
+    Nada aqui ainda.
+  <% end %>
+  
+  <% if @gifts_inactive.size > 0 %>
+  <hr>
+  <div class = "p-secao"><h3>Já entregues, obrigado!</h3></div>
+  <div class = "row align-items-center justify-content-center justify-content-md-around">
+        <% @gifts_inactive.each do |gift| %>
+          <div class = "col align-self-center grid-col">
+            <center>
+              <div class = "">
+                <img class="img-fluid grid-img img-bw" style = "filter: grayscale(100%);" src=<%= gift.url_image %> alt=<%= gift.name %>>
+              </div>
+              <div class = "grid-text-area">
+                <a class = "btn btn-secondary btn-sm" target = "_blank" href = <%=gift.url_prod%>><i class="fas fa-shopping-cart mr-sm"></i><%= gift.name %></a>
+              </div>
+            </center>
+          </div>
+        <% end %>
+      </div>
     </div>
-  </div>
+  
+  <% end %>
 </div>
