--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -14,8 +14,8 @@
       <th>Wishlevel</th>
       <th>Price</th>
       <th>Description</th>
-      <th>Url prod</th>
-      <th>Active</th>
+      <th>URL</th>
+      <th>Ativo?</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -27,8 +27,8 @@
         <td><center><strong><%= gift.name %></strong></center></td>
         <td><%= gift.wishlevel %></td>
         <td><%= gift.price %></td>
-        <td><%= gift.description %></td>
-        <td><small><a href = ></a></small><%= gift.url_prod %></td>
+        <td><small><%= gift.description %></small></td>
+        <td><small><a href = <%= gift.url_prod %>><%= gift.url_prod %></a></small></td>
         <td><%= gift.active %></td>
         <td><%= link_to 'Show', gift %></td>
         <td><%= link_to 'Edit', edit_gift_path(gift) %></td>
