--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -55,6 +55,8 @@
                 <li class = "mb-sm">Rei Leão (2019)</li>
                 <li class = "mb-sm">Homem-Aranha - Longe de Casa</li>
                 <li class = "mb-sm">Infiltrado na Klan</li>
+                <li class = "mb-sm">Kill Bill Vol.1</li>
+                <li class = "mb-sm">Kill Bill Vol.2</li>
             </ul>
         </div>
         
