--- a/app/views/profissional/_bom.html.erb
+++ b/app/views/profissional/_bom.html.erb
@@ -43,5 +43,33 @@
                 </tr>
             </tbody>
         </table>
+        
+        <div class = "nav-color" style = "padding: 10px 0px 6px 0px;">
+                <center><h3>Outras Linguagens</h3></center>
+            </div>
+            
+        <table class = "table table-responsive">
+            <tbody>
+                <tr>
+                    <td><center><%= image_tag "/assets/logos/python.png", class: "imagem-logo" %></center></td>
+                </tr>
+                <tr>
+                    <td><center><strong>Python</strong></center></td>
+                </tr>
+                
+                <tr>
+                    <td align="justify">Python é uma das minhas linguagens 
+                    favoritas. Fui monitor de cadeiras que usavam Python por 3 
+                    anos da minha graduação, e estou escrevendo um livro a 
+                    respeito. Acredito bastante que essa seja uma das melhores
+                    linguagens para se iniciar no estudo de programação.</td>
+                </tr>
+                
+                <tr>
+                    <td><a href = "https://sites.google.com/cin.ufpe.br/secretplaces">Meu site dedicado a estudo de Python</a></td>
+                </tr>
+            </tbody>
+        </table>
+        
     </center>
 </div>
