--- a/app/views/pessoal/index.html.erb
+++ b/app/views/pessoal/index.html.erb
@@ -55,15 +55,21 @@
     <div class = "p-secao-sm">
         <h5>Em programação</h5>
     </div>
-    <p>Python, Android, Rails, Java, Bootstrap, HTML, CSS, JS e Web Apps.</p>
+    <div class = "container">
+        <p>Python, Android, Rails, Java, Bootstrap, HTML, CSS, JS e Web Apps.</p>
+    </div>
     
     <div class = "p-secao-sm">
         <h5>Em empreendedorismo</h5>
     </div>
-    <p>Lean Startup, Metodologias Ágeis, Gestão de Pessoas, Estudo e Resolução de Problemas, Entrega de Valor, Marketing Digital e Design Thinking.</p>
+    <div class = "container">
+        <p>Lean Startup, Metodologias Ágeis, Gestão de Pessoas, Estudo e Resolução de Problemas, Entrega de Valor, Marketing Digital e Design Thinking.</p>
+    </div>
     
     <div class = "p-secao-sm">
         <h5>Em design</h5>
     </div>
-    <p>Experiência do Usuário, Interface do Usuário, Photshop, Premiere.</p>
+    <div class = "container">
+        <p>Experiência do Usuário, Interface do Usuário, Photshop, Premiere.</p>
+    </div>
 </div>
