adicionado os estagiarios, a sutil arte e o queijo

--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -57,6 +57,7 @@
                 <li class = "mb-sm">Infiltrado na Klan</li>
                 <li class = "mb-sm">Kill Bill Vol.1</li>
                 <li class = "mb-sm">Kill Bill Vol.2</li>
+                <li class = "mb-sm">Os Estagiários</li>
             </ul>
         </div>
         
