--- a/app/views/pessoal/personal_books.html.erb
+++ b/app/views/pessoal/personal_books.html.erb
@@ -29,6 +29,8 @@
         <li class = "mb-sm">Como pensar mais sobre sexo (150 páginas), por Alain de Botton (04/04/2019 + 37 dias)</li>
         <li class = "mb-sm">Gestão do Amanhã (247 páginas), por Sando Magaldi e José Salibi Neto (26/03/2019 + 58 dias)</li>
         <li class = "mb-sm">Os segredos da mente milionária (175 páginas), por T. Harv Eker (23/05/2019 + 76 dias)</li>
+        <li class = "mb-sm">A Sutil Arte de Ligar o Foda-se (223 páginas), por Mark Manson (08/08/2019 + 32 dias)</li>
+        <li class = "mb-sm">Quem mexeu no meu queijo? (110 páginas), por Spencer Johnson (09/09/2019 + 4 dias)</li>
 	</ul>
 	
 	<div class = "p-secao">
