--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -58,6 +58,7 @@
                 <li class = "mb-sm">Kill Bill Vol.1</li>
                 <li class = "mb-sm">Kill Bill Vol.2</li>
                 <li class = "mb-sm">Os Estagiários</li>
+                <li class = "mb-sm">Joker 2019</li>
             </ul>
         </div>
         
@@ -78,6 +79,7 @@
             
             <div class = "p-secao-sm">
                 <h5>HQs:</h5>
+                <li class = "mb-sm">Ashe - Mãe de Guerra</li>
             </div>
         </div>
     </div>
