--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -58,7 +58,10 @@
                 <li class = "mb-sm">Kill Bill Vol.1</li>
                 <li class = "mb-sm">Kill Bill Vol.2</li>
                 <li class = "mb-sm">Os Estagiários</li>
-                <li class = "mb-sm">Joker 2019</li>
+                <li class = "mb-sm">Joker</li>
+                <li class = "mb-sm">Malévola</li>
+                <li class = "mb-sm">Malévola: Dona do mal</li>
+                <li class = "mb-sm">Nasce uma estrela</li>
             </ul>
         </div>
         
