coisada as coisas

--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -62,6 +62,7 @@
                 <li class = "mb-sm">Malévola</li>
                 <li class = "mb-sm">Malévola: Dona do mal</li>
                 <li class = "mb-sm">Nasce uma estrela</li>
+                <li class = "mb-sm">Exterminador do Futuro: Destino Sombrio</li>
             </ul>
         </div>
         
@@ -81,9 +82,11 @@
             </div>
             
             <div class = "p-secao-sm">
-                <h5>HQs:</h5>
-                <li class = "mb-sm">Ashe - Mãe de Guerra</li>
+                <h5>HQs:</h5>                
             </div>
+            <ul>
+                <li class = "mb-sm">Ashe - Mãe de Guerra</li>
+            </ul>
         </div>
     </div>
     <hr/>
