--- a/app/views/profissional/_historico_profissional.html.erb
+++ b/app/views/profissional/_historico_profissional.html.erb
@@ -11,6 +11,11 @@
         </thead>
         <tbody>
             <tr>
+                <td>Jan/2019 - Jul/2019</td>
+                <td>Serttel</td>
+                <td>Desenvolvedor Full-Stack (Angular + Spring)</td>
+            </tr>
+            <tr>
                 <td>2017.1 - 2017.2</td>
                 <td>Centro Integrado de Tecnologia da Informação - UFPE</td>
                 <td>Analista de Marketing</td>
